[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/CustomPathGizmo/menu_bar.gd" type="Script" id=1]

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="box" type="HBoxContainer" parent="."]
margin_right = 40.0
custom_constants/separation = 0

[node name="top_xtent" type="HBoxContainer" parent="box"]
margin_right = 381.0
margin_bottom = 45.0
size_flags_vertical = 0

[node name="VSeparator" type="VSeparator" parent="box/top_xtent"]
margin_right = 8.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="box/top_xtent"]
margin_left = 16.0
margin_top = 10.0
margin_right = 177.0
margin_bottom = 35.0
text = "Gizmo extents:"

[node name="xtent" type="SpinBox" parent="box/top_xtent"]
margin_left = 185.0
margin_right = 381.0
margin_bottom = 45.0
hint_tooltip = "Extents of the translation gizmo (in meters)."
min_value = 0.5
max_value = 10.0
step = 0.5
value = 1.0
align = 1

[node name="top_open" type="HBoxContainer" parent="box"]
visible = false
margin_left = 343.0
margin_right = 502.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="box/top_open"]
margin_right = 8.0
margin_bottom = 45.0

[node name="open" type="Button" parent="box/top_open"]
margin_left = 16.0
margin_right = 159.0
margin_bottom = 45.0
hint_tooltip = "Separate the last point of the Curve from the first."
size_flags_horizontal = 3
text = "Open Loop"

[node name="top_tilt" type="HBoxContainer" parent="box"]
visible = false
margin_left = 343.0
margin_right = 570.0
margin_bottom = 45.0
rect_min_size = Vector2( 94, 0 )

[node name="VSeparator" type="VSeparator" parent="box/top_tilt"]
margin_right = 8.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="box/top_tilt"]
margin_left = 16.0
margin_top = 10.0
margin_right = 55.0
margin_bottom = 35.0
text = "Tilt:"

[node name="tilt" type="LineEdit" parent="box/top_tilt"]
margin_left = 63.0
margin_right = 227.0
margin_bottom = 45.0
hint_tooltip = "Tilt angle of the current Point (in degrees)."
align = 1
max_length = 7
expand_to_text_length = true
placeholder_text = "0"

[connection signal="text_entered" from="box/top_tilt/tilt" to="." method="_on_tilt_text_entered"]
